--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node template-generation/test/test-template-generation.js"
   },
   "author": "",
   "license": "ISC"
