--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node template-generation/test/test-template-generation.js"
+    "test": "DEVELOPMENT=true node template-generation/test/test-template-generation.js"
   },
   "author": "",
   "license": "ISC"
