--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,9 @@
   "description": "Backend for LIWG",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "handlebars": "^4.7.6"
   },
   "devDependencies": {},
