--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "Backend for LIWG",
   "main": "index.js",
   "dependencies": {
+    "archiver": "^5.0.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -11,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "DEVELOPMENT=true node template-generation/test/test-template-generation.js"
+    "test": "node test/test-template-generation.js"
   },
   "author": "",
   "license": "ISC"
