--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "rimraf": "^3.0.2",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {},
   "scripts": {
