--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ branches:
   - master
   - ci_cd_liwg
 before_install:
-- openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv
-  -in deploy.enc -out deploy -d
+- openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
 install:
 - npm install --only=dev
 beforescript:
