--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node
+
+sudo: required
+
 nodejs:
   - 12.18.0
 addons:
@@ -8,11 +11,8 @@ branches:
   only:
   - master
   - ci_cd_liwg
-before_install:
-- openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
-install:
-- npm install --only=dev
 beforescript:
+- openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
 - chmod 600 deploy && mv deploy ~/.ssh/id_rsa
 scripts:
 - cd landing-page
@@ -20,6 +20,5 @@ scripts:
 - npm run build
 - cd ..
 after_success:
-- ls
+- ls -a
 - scripts/deploy.sh
-
