--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node
 
 sudo: required
+dist: xenial
 
 nodejs:
   - 12.18.0
@@ -11,14 +12,10 @@ branches:
   only:
   - master
   - ci_cd_liwg
-beforescript:
+scripts:
 - openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
 - chmod 600 deploy && mv deploy ~/.ssh/id_rsa
-scripts:
-- cd landing-page
-- npm install
-- npm run build
-- cd ..
-after_success:
-- ls -a
-- scripts/deploy.sh
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: scripts/deploy
