--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
     - 134.122.39.75
 branches:
   only:
-  - master
+  - main
   - ci_cd_liwg
 scripts:
 - openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
@@ -19,3 +19,7 @@ deploy:
   - provider: script
     skip_cleanup: true
     script: scripts/deploy
+    on:
+      # all_branches: true
+      branch: main, ci_cd_liwg
+    
