--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ scripts:
 - openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
 - chmod 600 deploy && mv deploy ~/.ssh/id_rsa
 - cd scripts
-- . deploy
+- sh deploy.sh
 # deploy:
 #   - provider: script
 #     skip_cleanup: true
