--- a/code/landing-page/package.json
+++ b/code/landing-page/package.json
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install": "npm install",
+    "frontend": "npm run install & npm run start"
   },
   "eslintConfig": {
     "extends": [
