--- a/code/landing-page/package.json
+++ b/code/landing-page/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install": "npm install",
-    "frontend": "npm run install & npm run start"
+    "frontend": "npm run install && npm run start"
   },
   "eslintConfig": {
     "extends": [
