--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,14 @@ branches:
 scripts:
 - openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
 - chmod 600 deploy && mv deploy ~/.ssh/id_rsa
-- cd scripts
-- sh deploy.sh
-# deploy:
-#   - provider: script
-#     skip_cleanup: true
-#     script: scripts/deploy
-#     on:
-#       all_branches: true
+# - cd scripts
+# - sh deploy.sh
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: sh scripts/deploy.sh
+    on:
+      branches:
+        - main
+        - ci_cd_liwg
     
