--- a/.travis.yml
+++ b/.travis.yml
@@ -6,23 +6,23 @@ dist: xenial
 nodejs:
   - 12.18.0
 addons:
-  sshknownhosts:
-    - 134.122.39.75
+  ssh_known_hosts:
+    - $REMOTE_HOST
+
 branches:
   only:
   - main
   - ci_cd_liwg
+  
 scripts:
 - openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
 - chmod 600 deploy && mv deploy ~/.ssh/id_rsa
 # - cd scripts
 # - sh deploy.sh
+
 deploy:
   - provider: script
     skip_cleanup: true
     script: sh scripts/deploy.sh
     on:
-      branches:
-        - main
-        - ci_cd_liwg
-    
+      all_branches: true
