--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,11 @@ script:
 - openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
 - chmod 600 deploy && mv deploy ~/.ssh/id_rsa
 # - cd scripts
-# - sh deploy.sh
+# - sh server_deploy.sh
 
 deploy:
   - provider: script
     skip_cleanup: true
-    script: sh scripts/deploy.sh
+    script: scripts/server_deploy
     on:
       all_branches: true
