--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,14 @@ branches:
 script:
 - openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
 - chmod 600 deploy && mv deploy ~/.ssh/id_rsa
-- cd scripts
-- . server_deploy
+# - cd scripts
+# - chmod 777 -R
+# - sh server_deploy.sh
+
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: scripts/server_deploy.sh
+    on:
+      all_branches: true
+      condition: $TRAVIS_BRANCH =~ ^(main|ci_cd_liwg)$
