--- a/code/landing-page/package.json
+++ b/code/landing-page/package.json
@@ -19,8 +19,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "prodStart": "PORT=80 react-scripts start",
     "install": "npm install",
-    "frontend": "npm run install && npm run start"
+    "frontend": "npm run install && npm run prodStart"
   },
   "eslintConfig": {
     "extends": [
