--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
+    "ncp": "^2.0.0",
     "rimraf": "^3.0.2",
     "uuid": "^8.3.1"
   },
