--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,21 @@
 {
   "name": "liwg-backend",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Backend for LIWG",
   "main": "index.js",
   "dependencies": {
+    "archiver": "^5.0.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "ncp": "^2.0.0",
+    "rimraf": "^3.0.2",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "DEVELOPMENT=true node template-generation/test/test-template-generation.js"
+    "test": "node test/test-template-generation.js"
   },
   "author": "",
   "license": "ISC"
