--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "ncp": "^2.0.0",
+    "passport": "^0.4.1",
+    "passport-linkedin-oauth2": "^2.0.0",
     "rimraf": "^3.0.2",
     "uuid": "^8.3.1"
   },
