--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
   - 14.15.1
 addons:
   ssh_known_hosts:
-    - 134.122.39.75
+  - 134.122.39.75
 
 branches:
   only:
@@ -16,9 +16,9 @@ script:
 - chmod 600 deploy && mv deploy ~/.ssh/id_rsa
 
 deploy:
-  - provider: script
-    skip_cleanup: true
-    script: sh scripts/server_deploy.sh
-    on:
-      all_branches: true
-      condition: $TRAVIS_BRANCH =~ ^(main|ci_cd_liwg)$
+- provider: script
+  skip_cleanup: true
+  script: sh scripts/server_deploy.sh
+  on:
+    all_branches: true
+    condition: "$TRAVIS_BRANCH =~ ^(main|ci_cd_liwg)$"
