--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,17 @@
 language: node
-
 node_js:
-  - 14.15.1
+- 14.15.1
 addons:
   ssh_known_hosts:
   - 134.122.39.75
-
 branches:
   only:
   - main
   - ci_cd_liwg
-
 script:
-- openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv -in deploy.enc -out deploy -d
+- openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv
+  -in deploy.enc -out deploy -d
 - chmod 600 deploy && mv deploy ~/.ssh/id_rsa
-
 deploy:
 - provider: script
   skip_cleanup: true
@@ -22,3 +19,6 @@ deploy:
   on:
     all_branches: true
     condition: "$TRAVIS_BRANCH =~ ^(main|ci_cd_liwg)$"
+before_install:
+- openssl aes-256-cbc -K $encrypted_b0d51b9ff91b_key -iv $encrypted_b0d51b9ff91b_iv
+  -in deploy.enc -out deploy -d
