--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
@@ -17,7 +18,6 @@
     "rimraf": "^3.0.2",
     "uuid": "^8.3.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "node test/test-template-generation.js"
   },
