--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "ncp": "^2.0.0",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-linkedin-oauth2": "^2.0.0",
     "rimraf": "^3.0.2",
