--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "liwg-backend",
-  "version": "0.1.0",
-  "description": "Backend for LIWG",
-  "main": "index.js",
-  "dependencies": {
-    "archiver": "^5.0.2",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "handlebars": "^4.7.6",
-    "ncp": "^2.0.0",
-    "rimraf": "^3.0.2",
-    "uuid": "^8.3.1"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "node test/test-template-generation.js"
-  },
-  "author": "",
-  "license": "ISC"
+   "name": "liwg-backend",
+   "version": "0.1.0",
+   "description": "Backend for LIWG",
+   "main": "index.js",
+   "dependencies": {
+      "archiver": "^5.0.2",
+      "body-parser": "^1.19.0",
+      "cors": "^2.8.5",
+      "express": "^4.17.1",
+      "handlebars": "^4.7.6",
+      "ncp": "^2.0.0",
+      "rimraf": "^3.0.2",
+      "uuid": "^8.3.1"
+   },
+   "devDependencies": {
+      "eslint": "^7.15.0",
+      "prettier": "2.2.1"
+   },
+   "scripts": {
+      "test": "node test/test-template-generation.js",
+      "prettier": "prettier --write \"./**/*.{md,jsx,json,html,css,js,yml}\"",
+      "prettier-check": "prettier --check \"./**/*.{md,jsx,json,html,css,js,yml}\"",
+      "eslint-fix": "eslint --fix --ignore-path ../.gitignore .",
+      "eslint": "eslint --ignore-path ../.gitignore ."
+   },
+   "author": "",
+   "license": "ISC"
 }
