--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,23 @@
 {
   "name": "liwg-backend",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Backend for LIWG",
   "main": "index.js",
   "dependencies": {
     "archiver": "^5.0.2",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "ncp": "^2.0.0",
+    "passport": "^0.4.1",
+    "passport-linkedin-oauth2": "^2.0.0",
     "rimraf": "^3.0.2",
     "uuid": "^8.3.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "node test/test-template-generation.js"
   },
