--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "liwg-backend",
-  "version": "0.2.0",
-  "description": "Backend for LIWG",
-  "main": "index.js",
-  "dependencies": {
-    "archiver": "^5.0.2",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "handlebars": "^4.7.6",
-    "ncp": "^2.0.0",
-    "passport": "^0.4.1",
-    "passport-linkedin-oauth2": "^2.0.0",
-    "rimraf": "^3.0.2",
-    "uuid": "^8.3.1"
-  },
-  "scripts": {
-    "test": "node test/test-template-generation.js"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "liwg-backend",
+    "version": "0.2.0",
+    "description": "Backend for LIWG",
+    "main": "index.js",
+    "dependencies": {
+        "archiver": "^5.0.2",
+        "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-session": "^1.17.1",
+        "handlebars": "^4.7.6",
+        "ncp": "^2.0.0",
+        "passport": "^0.4.1",
+        "passport-linkedin-oauth2": "^2.0.0",
+        "rimraf": "^3.0.2",
+        "uuid": "^8.3.1"
+    },
+    "scripts": {
+        "test": "node test/test-template-generation.js",
+        "prettier": "prettier --write \"./**/*.{md,jsx,json,html,css,js,yml}\"",
+        "prettier-check": "prettier --check \"./**/*.{md,jsx,json,html,css,js,yml}\"",
+        "eslint-fix": "eslint --fix --ignore-path ../.gitignore .",
+        "eslint": "eslint --ignore-path ../.gitignore ."
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "eslint": "^7.15.0",
+        "prettier": "2.2.1"
+    }
 }
