--- a/landing-page/package.json
+++ b/landing-page/package.json
@@ -18,9 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "install": "npm install",
-    "frontend": "npm run install && npm run start"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
